ネットワークの設定を追加

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,11 @@ services:
     build: .
     volumes:
       - ./workspace:/workspace
+    networks:
+      - default
     tty: true
     entrypoint: bash -c "bash /workspace/entrypoint.sh && /bin/bash"
+networks:
+  default:
+    external:
+      name: br0
