- Dockerfile     - yum install 系の RUN を複数書いていたのを && で1つにまとめる     - yum install 前に yum update を挟む     - タイムゾーン指定を追加 - ディレクトリ構造見直し     - Ansible 系のファイルを workspace の外に出した     - 秘密鍵・公開鍵の保管場所を変更 ( `/workspace/` → `/rsakey/` ) - エントリポイント内の変数名を調整(単語区切りにアンダースコア入れる) - ハードコーディング回避     - `hosts` をGit 管理から外し、サンプルファイルを登録     - 秘密鍵ファイル名をエントリポイント内ハードコーディングから `.env` に分離、 `.env` は Git 管理にはしないようにサンプルファイル作成     - `param_vars.yml` のデータ構造を見直し。階層を付けてどのタスクで使用しているか分かりやすくした         - 併せてタスク全体の引数の指定を見直し     - 管理者権限ユーザをタスク yml のハードコピーから `param_vars.yml` に分離 - `README.md` 修正 - Docker Compose バージョン変更 - Ansible のコマンドを叩くのが面倒なのでショートカット用の bash を準備

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
+.env
 /workspace/*
 !/workspace/entrypoint.sh
-!/workspace/ansible/
-/workspace/ansible/vars/param_vars.yml
+/ansible/targets/hosts
+/ansible/vars/param_vars.yml
+/rsakey/*
+!/rsakey/.gitkeep
