--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -1,7 +1,7 @@
 - name: Settings vsftpd and httpd
 
   become: yes
-  become_user: ADMIN_USER
+  become_user: "{{ permission.adminuser }}"
   become_method: su
 
   hosts:
@@ -13,17 +13,17 @@
     - name: Add Linux User
       include_tasks: ./tasks/add_user.yml
       vars:
-        user: "{{ username }}"
-        passwd: "{{ password }}"
+        user: "{{ ftp.username }}"
+        passwd: "{{ ftp.password }}"
     - name: Settings vsftpd user_list and user_conf
       include_tasks: ./tasks/vsftpd_user_settings.yml
       vars:
-        user: "{{ username }}"
-        directory: "{{ rootdirectory }}"
+        user: "{{ ftp.username }}"
+        directory: "{{ commons.rootdirectory }}"
     - name: Setup Apache conffile
       include_tasks: ./tasks/apache_settings.yml
       vars:
-        directory: "{{ rootdirectory }}"
-        url: "{{ domain }}"
-        ip: "{{ ipaddress }}"
-        portnumber: "{{ portnum }}"
+        directory: "{{ commons.rootdirectory }}"
+        url: "{{ apache.domain }}"
+        ip: "{{ apache.ipaddress }}"
+        portnumber: "{{ apache.portnum }}"
