--- a/ansible/reset.yml
+++ b/ansible/reset.yml
@@ -1,7 +1,7 @@
 - name: Remove vsftpd and httpd settings
 
   become: yes
-  become_user: ADMIN_USER
+  become_user: "{{ permission.adminuser }}"
   become_method: su
 
   hosts:
@@ -12,7 +12,7 @@
   tasks:
     - name: Remove user
       user:
-        name: "{{ username }}"
+        name: "{{ ftp.username }}"
         state: absent
         remove: yes
     - name: Remove user in vsftpd user_list
@@ -20,11 +20,11 @@
         path: /etc/vsftpd/user_list
         create: yes
         insertafter: EOF
-        marker: "# {mark} ANSIBLE basic setup: {{ username }}"
+        marker: "# {mark} ANSIBLE basic setup: {{ ftp.username }}"
         block: ""
     - name: Remove user_conf file
       file:
-        path: "/etc/vsftpd/user_conf/{{ username }}"
+        path: "/etc/vsftpd/user_conf/{{ ftp.username }}"
         state: absent
     - name: Restart vsftpd
       systemd:
@@ -33,11 +33,11 @@
         daemon_reload: yes
     - name: Remove Apache virtual site data
       file:
-        path: "/var/www/{{ rootdirectory }}"
+        path: "/var/www/{{ commons.rootdirectory }}"
         state: absent
     - name: Remove Apache conffile
       file:
-        path: "/etc/httpd/conf.d/{{ rootdirectory }}.conf"
+        path: "/etc/httpd/conf.d/{{ commons.rootdirectory }}.conf"
         state: absent
     - name: Restart httpd
       systemd:
