- Apache conf のテンプレートのインデントを調整 - メッセージ調整 - 変数調整

--- a/ansible/reset.yml
+++ b/ansible/reset.yml
@@ -39,7 +39,7 @@
       file:
         path: "/etc/httpd/conf.d/{{ commons.rootdirectory }}.conf"
         state: absent
-    - name: Restart httpd
+    - name: Reload httpd conf
       systemd:
         name: httpd.service
         state: reloaded
